[gd_scene load_steps=9 format=3 uid="uid://iotor00ogoqu"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_0an02"]
[ext_resource type="PackedScene" uid="uid://np3sjtdqv647" path="res://scenes/save_game.tscn" id="1_n2uas"]
[ext_resource type="Script" path="res://scripts/random_word_generator.gd" id="2_4m16p"]
[ext_resource type="PackedScene" uid="uid://b23u0c86iqx25" path="res://scenes/level_manager.tscn" id="2_hqhpp"]
[ext_resource type="Script" path="res://scripts/guess_manager.gd" id="3_2dtri"]
[ext_resource type="Script" path="res://scripts/timer_manager.gd" id="4_k1sr0"]
[ext_resource type="PackedScene" uid="uid://nv0xdio8knoa" path="res://scenes/player.tscn" id="5_nfoh7"]
[ext_resource type="FontFile" uid="uid://cr5xqdjcwmv8o" path="res://PixelOperator8.ttf" id="6_h8f1c"]

[node name="GameplayScene" type="Node"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_0an02")

[node name="LevelManager" parent="." instance=ExtResource("2_hqhpp")]
unique_name_in_owner = true

[node name="SaveGame" parent="." instance=ExtResource("1_n2uas")]
unique_name_in_owner = true

[node name="RandomWordGenerator" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_4m16p")

[node name="GuessManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_2dtri")

[node name="TimerManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_k1sr0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, -146)
zoom = Vector2(2, 2)

[node name="Player" parent="." instance=ExtResource("5_nfoh7")]
unique_name_in_owner = true
position = Vector2(0, -32)
scale = Vector2(2, 2)

[node name="CountdownTimer" type="Label" parent="."]
unique_name_in_owner = true
z_index = 10
offset_left = -24.0
offset_top = -152.0
offset_right = 28.0
offset_bottom = -101.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_h8f1c")
theme_override_font_sizes/font_size = 48
text = "3"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
z_index = 5
offset_left = -56.0
offset_top = -272.0
offset_right = 58.0
offset_bottom = -240.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_h8f1c")
theme_override_font_sizes/font_size = 24
text = "0:00.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="TimerLabel"]
z_index = 4
z_as_relative = false
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 120.0
offset_bottom = 40.0

[node name="SecretWordLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -95.0
offset_top = -216.0
offset_right = 96.0
offset_bottom = -170.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_h8f1c")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="GuessInputBox" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = -80.0
offset_top = -160.0
offset_right = 78.0
offset_bottom = -129.0
theme_override_fonts/font = ExtResource("6_h8f1c")
theme_override_font_sizes/font_size = 16
alignment = 1

[node name="Letters" type="Node" parent="."]
unique_name_in_owner = true

[connection signal="text_changed" from="GuessInputBox" to="GuessManager" method="_on_guess_input_box_text_changed"]
